--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,8 +16,8 @@
             <nav class="menu">
                 <ul>
                     <li><a href="#Inicio">Início</a></li>
-                    <li><a href="Sobre">Sobre</a></li>
-                    <li><a href="Servicos">Serviços</a></li>
+                    <li><a href="#Sobre">Sobre</a></li>
+                    <li><a href="#Servicos">Serviços</a></li>
                 </ul>
             </nav>
 
@@ -30,7 +30,7 @@
     </header><!--fim do header-->
 
     <main>
-        <section class="topo-do-site">
+        <section class="topo-do-site" id="Inicio">
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
@@ -47,13 +47,9 @@
             </div>
         </section><!--fim do topo do site-->
 
-        <section class="sobre">
+        <section class="sobre" id="Sobre">
             <div class="interface">
                 <div class="flex">
-
-                    <div class="img-sobre">
-                        <img src="..//HTML/IMG/fotoSobre.png" alt="Imagem dos Integrantes">
-                    </div>
                     <div class="txt-sobre">
                         <h2 class="titulo"><span>Quem somos nós?</span></h2>
                         <p>Somos um grupo de alunos do SENAC de São Bernardo do Campo, determinados a fortalecer a segurança de redes para empresas.
@@ -66,17 +62,27 @@
             </div>
         </section><!--fim do sobre-->
 
-        <section class="servicos">
+        <section class="servicos" id="Servicos">
             <div class="interface">
                 <h3 class="titulo">Nossos Serviços</h3>
                 <div class="flex">
                     <div class="serv-box">
                         <i></i>
-                        <h3></h3>
+                        <h3>Serviço 1</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ex excepturi, autem animi aspernatur voluptas placeat corrupti. Adipisci, aliquam at! Nihil temporibus tenetur dolores excepturi totam cupiditate. Consequatur, delectus perspiciatis!</p>
+                    </div>
+                    <div class="serv-box">
+                        <i></i>
+                        <h3>Serviço 2</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem illo reiciendis error ipsa minima praesentium, adipisci voluptas molestiae fuga placeat culpa! Ut architecto dolorum, nulla ipsa modi excepturi ratione animi?</p>
                     </div>
                 </div>
             </div>
         </section><!--fim de serviços-->
+
+        <footer>
+            <h4>Desenvolvido por Pedro Almeida</h4>
+        </footer><!--fim do footer-->
     </main>
     
 </body>
