--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>DDLPluz</title>
 </head>
 <body>
@@ -50,6 +51,7 @@
         <section class="sobre" id="Sobre">
             <div class="interface">
                 <div class="flex">
+                    <img src="./IMG/fotoSobre.png" alt="Imagem do time">
                     <div class="txt-sobre">
                         <h2 class="titulo"><span>Quem somos nós?</span></h2>
                         <p>Somos um grupo de alunos do SENAC de São Bernardo do Campo, determinados a fortalecer a segurança de redes para empresas.
@@ -80,9 +82,29 @@
             </div>
         </section><!--fim de serviços-->
 
+        <section>
+            <div class="formulario">
+                <h4>Entre em Contato</h4>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Nome">
+                    <input type="text" name="" id="" placeholder="Email">
+                    <input type="text" name="" id="" placeholder="Assunto">
+                    <textarea name="" id="" placeholder="Mensagem"></textarea>
+                </form>
+            </div>
+            <div>
+                <button class="botao">Enviar</button>
+            </div>
+        </section><!--Fim do formulário-->
+
         <footer>
-            <h4>Desenvolvido por Pedro Almeida</h4>
+            <h5>Desenvolvido por Pedro Almeida</h5>
+            <div class="redes-sociais">
+                <button><i class="bi bi-linkedin"></i></button>
+                <button><i class="bi bi-github"></i></button>
+            </div>
         </footer><!--fim do footer-->
+
     </main>
     
 </body>
