--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="shortcut icon" href="IMG/favicon-16x16.png" type="image/x-icon">
     <title>DDLPluz</title>
 </head>
 <body>
@@ -97,11 +98,11 @@
             </div>
         </section><!--Fim do formulário-->
 
-        <footer>
+        <footer class="footer">
             <h5>Desenvolvido por Pedro Almeida</h5>
             <div class="redes-sociais">
-                <button><i class="bi bi-linkedin"></i></button>
-                <button><i class="bi bi-github"></i></button>
+                <a href="https://www.linkedin.com/in/pedroaugustosantosalmeida/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/PedroAlmeida25" target="_blank"><i class="bi bi-github"></i></a>
             </div>
         </footer><!--fim do footer-->
 
