--- a/HTML/index.html
+++ b/HTML/index.html
@@ -84,7 +84,7 @@
         </section><!--fim de serviços-->
 
         <section>
-            <div class="formulario">
+            <div class="formulario" id="contato">
                 <h4>Entre em Contato</h4>
                 <form action="">
                     <input type="text" name="" id="" placeholder="Nome">
