--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="IMG/favicon-16x16.png" type="image/x-icon">
     <title>DDLPluz</title>
 </head>
@@ -36,7 +42,9 @@
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
-                        <h1>DDLPluz</h1>
+                        <h1>DDLPluz:</h1>
+                        <h7>EMPRESA DE TI APAIXONADA POR
+                            TECNOLOGIA E INOVAÇÃO.</h7>
                         <p>Na DDLPluz estamos na linha de frente contra ataques cibernéticos. 
                             Nossa equipe especializada utiliza tecnologia de ponta para detectar e prevenir ameaças, 
                             mantendo sua rede segura. Junte-se a nós para uma internet mais segura e confiável.
@@ -71,13 +79,14 @@
                 <div class="flex">
                     <div class="serv-box">
                         <i></i>
-                        <h3>Serviço 1</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ex excepturi, autem animi aspernatur voluptas placeat corrupti. Adipisci, aliquam at! Nihil temporibus tenetur dolores excepturi totam cupiditate. Consequatur, delectus perspiciatis!</p>
+                        <h6>Suporte Técnico</h6>
+                        <p>Nosso serviço de TI tem como objetivo alinhas as estratégias de negócio. Nossa Tecnologia tem um diferencial na preparação de novas tecnologias, na manutenção e na melhoria de negócios.</p>
                     </div>
                     <div class="serv-box">
                         <i></i>
-                        <h3>Serviço 2</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem illo reiciendis error ipsa minima praesentium, adipisci voluptas molestiae fuga placeat culpa! Ut architecto dolorum, nulla ipsa modi excepturi ratione animi?</p>
+                        <h6>Infraestrutura</h6>
+                        <p>Garanta a estabilidade e a eficiência operacional para configurar redes, realizar certificações e fortalecer sua estrutura. Configuração de servidores;
+                            Configuração de ambientes de rede;</p>
                     </div>
                 </div>
             </div>
