--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
+    <script type="text/javascript" src="../JS/script.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -95,15 +96,15 @@
         <section>
             <div class="formulario" id="contato">
                 <h4>Entre em Contato</h4>
-                <form action="">
-                    <input type="text" name="" id="" placeholder="Nome">
-                    <input type="text" name="" id="" placeholder="Email">
-                    <input type="text" name="" id="" placeholder="Assunto">
-                    <textarea name="" id="" placeholder="Mensagem"></textarea>
+                <form name="meu-formulario" method="post">
+                    <input type="text" name="nome" id="nomeId" placeholder="Nome">
+                    <input type="text" name="email" id="emailId" placeholder="Email">
+                    <input type="text" name="assunto" id="assuntoId" placeholder="Assunto">
+                    <textarea name="mensagem" id="mensagemId" placeholder="Mensagem"></textarea>
                 </form>
             </div>
             <div>
-                <button class="botao">Enviar</button>
+                <button class="botao" type="submit" onclick="Enviar()" id="enviar">Enviar</button>
             </div>
         </section><!--Fim do formulário-->
 
