--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
-    <script type="text/javascript" src="../JS/script.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -84,39 +83,64 @@
                     <div class="serv-box">
                         <i></i>
                         <h6>Suporte Técnico</h6>
-                        <p>Nosso serviço de TI tem como objetivo alinhas as estratégias de negócio. Nossa Tecnologia tem um diferencial na preparação de novas tecnologias, na manutenção e na melhoria de negócios.</p>
+                        <p>Nosso suporte técnico de TI é projetado para alinhar estratégias de negócio com soluções inovadoras. Destacamo-nos na implementação de novas tecnologias e na manutenção proativa, impulsionando a eficiência operacional e a evolução contínua dos negócios.</p>
                     </div>
                     <div class="serv-box">
                         <i></i>
                         <h6>Infraestrutura</h6>
-                        <p>Garanta a estabilidade e a eficiência operacional para configurar redes, realizar certificações e fortalecer sua estrutura. Configuração de servidores;
-                            Configuração de ambientes de rede;</p>
+                        <p>Garantimos estabilidade e eficiência operacional através da configuração especializada de redes e servidores. Nossos serviços incluem certificações rigorosas para assegurar conformidade e fortalecer sua infraestrutura de TI, criando ambientes de rede seguros e resilientes.</p>
+                    </div>
+                </div>
+                <div class="flex">
+                    <div class="serv-box">
+                        <i></i>
+                        <h6>Auditoria de Segurança</h6>
+                        <p>A nossa auditoria de segurança cibernética realiza uma análise detalhada da infraestrutura de TI da sua empresa, identificando vulnerabilidades e avaliando conformidade com rigorosos padrões de segurança. Oferecemos serviços de defesa contra ataques cibernéticos.</p>
+                    </div>
+                    <div class="serv-box">
+                        <i></i>
+                        <h6>Monitoramento a Incidentes</h6>
+                        <p>Nosso serviço de monitoramento e resposta a incidentes protege sua rede de forma proativa contra ataques cibernéticos. Detectamos e respondemos rapidamente a atividades suspeitas, garantindo segurança contínua e mitigação eficiente de incidentes de segurança em tempo real.</p>
                     </div>
                 </div>
             </div>
         </section><!--fim de serviços-->
 
-        <section>
-            <div class="formulario" id="contato">
-                <h4>Entre em Contato</h4>
-                <form name="meu-formulario" method="post">
-                    <input type="text" name="nome" id="nomeId" placeholder="Nome">
-                    <input type="text" name="email" id="emailId" placeholder="Email">
-                    <input type="text" name="assunto" id="assuntoId" placeholder="Assunto">
-                    <textarea name="mensagem" id="mensagemId" placeholder="Mensagem"></textarea>
-                </form>
-            </div>
+        <section class="time">
             <div>
-                <button class="botao" type="submit" onclick="Enviar()" id="enviar">Enviar</button>
+                <h4>Conheça nosso time:</h4>
+            </div>
+            <div class="integrantes">
+                <div>
+                    <img width="90%" src="IMG/img.jpg" alt="Imagem do Integrante">
+                    <p class="nome">Pedro Almeida</p>
+                    <p>Desenvolvedor</p>
+                    <a href="https://www.linkedin.com/in/pedroaugustosantosalmeida/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://github.com/PedroAlmeida25" target="_blank"><i class="bi bi-github"></i></a>
+                </div>
+                <div>
+                    <img width="90%" src="IMG/img.jpg" alt="Imagem do Integrante">
+                    <p class="nome">Diogo Costa</p>
+                    <p>Administrador de Redes</p>
+                    <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
+                </div>
+                <div>
+                    <img width="90%" src="IMG/img.jpg" alt="Imagem do Integrante">
+                    <p class="nome">Lucas Reis</p>
+                    <p>Suporte de TI</p>
+                    <a href="https://www.linkedin.com/in/lucas-reis-59b20a253/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                </div>
+                <div>
+                    <img width="90%" src="IMG/img.jpg" alt="Imagem do Integrante">
+                    <p class="nome">Diego Rodrigues</p>
+                    <p>CyberSegurança</p>
+                    <a href="https://www.linkedin.com/in/diego-rodrigues-374456310/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                </div>
             </div>
         </section><!--Fim do formulário-->
 
         <footer class="footer">
             <h5>Desenvolvido por Pedro Almeida</h5>
-            <div class="redes-sociais">
-                <a href="https://www.linkedin.com/in/pedroaugustosantosalmeida/" target="_blank"><i class="bi bi-linkedin"></i></a>
-                <a href="https://github.com/PedroAlmeida25" target="_blank"><i class="bi bi-github"></i></a>
-            </div>
         </footer><!--fim do footer-->
 
     </main>
