--- a/HTML/index.html
+++ b/HTML/index.html
@@ -106,35 +106,38 @@
             </div>
         </section><!--fim de serviços-->
 
-        <section class="time">
+        <section class="time" id="contato">
             <div>
                 <h4>Conheça nosso time:</h4>
             </div>
             <div class="integrantes">
                 <div>
-                    <img width="90%" src="IMG/img.jpg" alt="Imagem do Integrante">
+                    <img src="IMG/pedro-foto.png" alt="Imagem do Integrante">
                     <p class="nome">Pedro Almeida</p>
                     <p>Desenvolvedor</p>
                     <a href="https://www.linkedin.com/in/pedroaugustosantosalmeida/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     <a href="https://github.com/PedroAlmeida25" target="_blank"><i class="bi bi-github"></i></a>
+                    <a href="almeida.pedroaugusto25@gmail.com" target="_blank"><i class="bi bi-envelope"></i></a>
                 </div>
                 <div>
-                    <img width="90%" src="IMG/img.jpg" alt="Imagem do Integrante">
+                    <img src="IMG/diogo-foto.png" alt="Imagem do Integrante">
                     <p class="nome">Diogo Costa</p>
                     <p>Administrador de Redes</p>
-                    <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
+                    <a href="diogo.costa23@outlook.com" target="_blank"><i class="bi bi-envelope"></i></a>
                 </div>
                 <div>
-                    <img width="90%" src="IMG/img.jpg" alt="Imagem do Integrante">
+                    <img src="IMG/foto-lucas.png" alt="Imagem do Integrante">
                     <p class="nome">Lucas Reis</p>
                     <p>Suporte de TI</p>
                     <a href="https://www.linkedin.com/in/lucas-reis-59b20a253/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                    <a href="Lucasreis1601@gmail.com" target="_blank"><i class="bi bi-envelope"></i></a>
                 </div>
                 <div>
-                    <img width="90%" src="IMG/img.jpg" alt="Imagem do Integrante">
+                    <img width="105%" src="IMG/diego-foto.png" alt="Imagem do Integrante">
                     <p class="nome">Diego Rodrigues</p>
                     <p>CyberSegurança</p>
                     <a href="https://www.linkedin.com/in/diego-rodrigues-374456310/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                    <a href="dr3540001@gmail.com" target="_blank"><i class="bi bi-envelope"></i></a>
                 </div>
             </div>
         </section><!--Fim do formulário-->
