--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="interface">
             <a href="#">
-                <img src="..//HTML/IMG/Logo-removebg-preview-removebg-preview.png" alt="Imagem do Logo">
+                <img src="IMG/Logo-removebg-preview-removebg-preview.png" alt="Imagem do Logo">
             </a>
 
             <nav class="menu">
@@ -54,7 +54,7 @@
                         </a>
                     </div>
                     <div class="img-topo-site">
-                        <img src="..//HTML/IMG/Logo-removebg-preview-removebg-preview.png" alt="Imagem do Logo">
+                        <img src="IMG/Logo-removebg-preview-removebg-preview.png" alt="Imagem do Logo">
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
         <section class="sobre" id="Sobre">
             <div class="interface">
                 <div class="flex">
-                    <img src="./IMG/fotoSobre.png" alt="Imagem do time">
+                    <img src="IMG/fotoSobre.png" alt="Imagem do time">
                     <div class="txt-sobre">
                         <h2 class="titulo"><span>Quem somos nós?</span></h2>
                         <p>Somos um grupo de alunos do SENAC de São Bernardo do Campo, determinados a fortalecer a segurança de redes para empresas.
