fix: ajuste dos textos

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                     <img src="IMG/fotoSobre.png" alt="Imagem do time">
                     <div class="txt-sobre">
                         <h2 class="titulo"><span>Quem somos nós?</span></h2>
-                        <p>Somos um grupo de alunos do SENAC de São Bernardo do Campo, determinados a fortalecer a segurança de redes para empresas.
-                        Nosso projeto não apenas aborda essa necessidade crucial, mas também serve como uma valiosa contribuição para nosso curso.</p>
+                        <p>Somos um grupo de alunos do SENAC de São Bernardo do Campo, determinados a fortalecer a segurança de redes para empresas. Nosso projeto não apenas aborda essa necessidade crucial, mas também serve como uma valiosa contribuição para nosso curso.</p>
                         <p>Combinando conhecimento e paixão pela tecnologia, buscamos desenvolver soluções práticas e eficazes para proteger as redes contra ameaças cibernéticas, 
                         enquanto compartilhamos nosso progresso e resultados com a comunidade.</p> 
                         <p>Junte-se a nós nessa jornada enquanto trabalhamos para construir um futuro mais seguro e resiliente para empresas de todos os tamanhos, começando aqui, no SENAC em São Bernardo do Campo.</p>
@@ -83,7 +82,7 @@
                     <div class="serv-box">
                         <i></i>
                         <h6>Suporte Técnico</h6>
-                        <p>Nosso suporte técnico de TI é projetado para alinhar estratégias de negócio com soluções inovadoras. Destacamo-nos na implementação de novas tecnologias e na manutenção proativa, impulsionando a eficiência operacional e a evolução contínua dos negócios.</p>
+                        <p>Nosso suporte técnico de TI é projetado para alinhar estratégias de negócio com soluções inovadoras Destacamo-nos na implementação de novas tecnologias e na manutenção proativa, impulsionando a eficiência operacional e a evolução contínua dos negócios.</p>
                     </div>
                     <div class="serv-box">
                         <i></i>
