--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <!-- <a href="almeida.pedroaugusto25@gmail.com" target="_blank"><i class="bi bi-envelope"></i></a> -->
                 </div>
                 <div>
-                    <img src="IMG/diogo-foto.png" alt="Imagem do Integrante">
+                    <img src="IMG/diogo.png" alt="Imagem do Integrante">
                     <p class="nome">Diogo Costa</p>
                     <p>Administrador de Redes</p>
                     <!-- <a href="diogo.costa23@outlook.com" target="_blank"><i class="bi bi-envelope"></i></a> -->
